unpackaged/main/default/objects/ETC_Rental_Settings__c/ETC_Rental_Settings__c.object-meta.xml
<CustomObject>
    <label>Rental Settings</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rental Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>