unpackaged/main/default/objects/ETC_Rental_Settings__c/fields/ETC_hours_before_booking_date__c.field-meta.xml
<CustomField>
    <fullName>ETC_hours_before_booking_date__c</fullName>
    <description>Difference Hours Between Booking Time and Cancelled Time</description>
    <label>Hours before booking date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>