unpackaged/main/default/objects/ETC_Rental_Settings__c/fields/ETC_Modification_Details__c.field-meta.xml
<CustomField>
    <fullName>ETC_Modification_Details__c</fullName>
    <label>Modification Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Itinerary</fullName>
            </value>
            <value>
                <fullName>Vehicle and Itinerary</fullName>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>