unpackaged/main/default/objects/ETC_Rental_Settings__c/fields/ETC_Policy__c.field-meta.xml
<CustomField>
    <fullName>ETC_Policy__c</fullName>
    <label>Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Modify Booking</fullName>
            </value>
            <value>
                <fullName>Flat Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>