unpackaged/main/default/objects/ETC_Rental_Settings__c/fields/ETC_Refund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ETC_Refund_Percentage__c</fullName>
    <label>Refund Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>