unpackaged/main/default/objects/ETC_Rental_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETC_Policy__c</columns>
    <columns>ETC_Refund_Percentage__c</columns>
    <columns>ETC_hours_before_booking_date__c</columns>
    <columns>ETC_Modification_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>